SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    29 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140729
Tag Summary: Bug in CVMix Makefile caused problems with PGI; updated CVMix tag

Files Modified:
 M      .
M       SVN_EXTERNAL_DIRECTORIES
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    28 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140728
Tag Summary: OCN_ONED variable was renamed OCN_ONEDIM in env_run.xml

Files Modified:
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================
Tag Creator: santos
Developers:  santos
Tag Date:    14 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140714a
Tag Summary: Combine xmlchange commands to make namelist build a bit faster.

Files Modified:
M       bld/pop2.buildexe.csh
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    14 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140714
Tag Summary: Added C1D / C_ONED compset in scripts that basically just sets a
             variable in env_run.xml; build-namelist builds off of this
             variable and sets 20-ish namelist variables for 1D case.

             I also updated externals to the latest CVMix tag (v0.51-beta) and
             added the POP_TAVG_R8 flag to env_build so pop2.buildexe.csh can
             add the -DTAVG_R8 macro based on that variable (avoids requiring
             a sourcemod to get double precision tavg output)

Files Modified:
 M      .
M       bld/build-namelist
M       bld/pop2.buildexe.csh
M       bld/namelist_files/namelist_defaults_pop2.xml
M       SVN_EXTERNAL_DIRECTORIES